@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction
skinparam classAttributeIconSize 0

hide circle
hide methods


class GreenSpace{
    local
    address
    area
}

class  Entry{
        -title
        -description
        -degreeurgency
        -datebegin
        -dateend
        -state
        -greenSpace
}

class GreenSpaceManager {
    name
    email
    phone
}
GreenSpace "1" -- "*" "Entry" : has >
GreenSpaceManager "1" -- "*" GreenSpace : manages >
@enduml